<resources>

    <string name="app_name">CancerDiagnosticApp</string>
    <string name="authentication_code">Authentication code: </string>
    <string name="doctor">Doctor</string>
    <string name="administrator">Administrator</string>
    <string name="log_in_as">Log in as: </string>
    <string name="insert_password">Insert password</string>
    <string name="log_in">LogIn</string>
    <string name="new_pacient">New pacient</string>
    <string name="new_doctor">New doctor</string>
    <string name="name">Name</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="cnp">CNP</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="insert_new_pacient">Insert new pacient</string>
    <string name="insert_new_doctor">Insert new doctor</string>
    <string name="update_doctor">Update doctor</string>
    <string name="address">Address</string>
    <string name="phone">Phone number</string>
    <string name="insert_cnp">Please insert a CNP</string>
    <string name="insert_information">Please insert all the information</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="delete">Delete</string>
    <string name="selection"> %1$s Selected</string>
    <string name="update">Update</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_changed">Password changed successfully</string>
    <string name="wrong_current_password">Wrong current password</string>
    <string name="wrong_confirmed_password">Wrong confirmed password</string>
    <string name="log_out">Logout</string>
    <string name="invalid_email">Email address is invalid</string>
    <string name="invalid_user">Invalid user</string>
    <string name="wrong_password">Wrong password</string>
    <string name="empty_grid_view_radiography">No radiography</string>
    <string name="name:">Name: </string>
    <string name="cnp:">CNP: </string>
    <string name="address:">Address: </string>
    <string name="phone:">Phone: </string>
    <string name="email:">Email: </string>
    <string name="insert_radiography">Insert radiography</string>
    <string name="browse">Browse</string>
    <string name="details">Details</string>
    <string name="details_">Details : </string>
    <string name="diagnostic">Diagnostic</string>
    <string name="see_more"><u>See more</u></string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="edit_underlined"><u>Edit</u></string>
    <string name="edit_radiography_details">Edit radiography details</string>

</resources>